test/files/neg/t2031.check
t2031.scala:8: error: polymorphic expression cannot be instantiated to expected type;
 found   : [A]collection.mutable.Builder[A,collection.immutable.TreeSet[A]]
 required: collection.generic.CanBuildFrom[collection.immutable.TreeSet[Int],Int,?]
 res0.map(x => x)(TreeSet.newBuilder)
                          ^
one error found
